--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 {port_env, [
-        {"EXE_LDFLAGS", "$ALCOVE_LDFLAGS -lpthread $EXE_LDFLAGS"},
+        {"EXE_LDFLAGS", "$ALCOVE_LDFLAGS $EXE_LDFLAGS"},
         {"EXE_CFLAGS", "$EXE_CFLAGS $ALCOVE_CFLAGS"}
         ]}.
 
